@startuml
skinparam monochrome true
skinparam StateFontName Helvetica
skinparam defaultFontName Monospaced
skinparam defaultFontStyle Bold
skinparam state {
    FontStyle Bold
}
state TrafficIntersectionFSM {
[*] --> OFF
OFF --> STOPPED : ON_OFF
STOPPED --> OFF : ON_OFF
STOPPED --> GOING : START
STOPPED --> STOPPED : STOPPED
STOPPED --> FLASHING : FLASH
GOING --> STOPPING : <<timeout = {cycleTime}>>
GOING --> STOPPING : SWITCH
GOING --> WAITING_STOPPED : STOP
STOPPING --> WAITING : STOPPED
STOPPING --> STOPPING : SWITCH
STOPPING --> WAITING_STOPPED : STOP
WAITING --> GOING : <<timeout = {cycleWaitTime}>>
WAITING --> WAITING : SWITCH
WAITING --> STOPPED : STOP
WAITING_STOPPED --> STOPPED : <<timeout = {cycleWaitTime/2}>>
WAITING_STOPPED --> STOPPED : STOPPED
FLASHING --> STOPPED : STOP
}
@enduml
